fix warehouse heading icons alignment

--- a/src/components/WarehousesHeadings/WarehousesHeadings.scss
+++ b/src/components/WarehousesHeadings/WarehousesHeadings.scss
@@ -9,11 +9,10 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         padding: 1.5rem 2rem;
 
         &__icon {
-            position: relative;
-            top: -0.4rem;
             width: 1.5rem;
             cursor: pointer;
         }
